Refactor things to make tt_cluster.hpp private

--- a/tt_metal/distributed/CMakeLists.txt
+++ b/tt_metal/distributed/CMakeLists.txt
@@ -17,5 +17,6 @@ target_link_libraries(
         common
     PRIVATE
         Metalium::Metal::Impl
+        Metalium::Metal::LLRT
         TT::Metalium::HostDevCommon
 )
