--- a/tt_metal/llrt/CMakeLists.txt
+++ b/tt_metal/llrt/CMakeLists.txt
@@ -82,6 +82,7 @@ target_link_libraries(
 
 set(LLRT_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/llrt.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/rtoptions.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tlb_config.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tt_cluster.cpp
@@ -105,6 +106,7 @@ target_link_libraries(
         Tracy::TracyClient
         nlohmann_json::nlohmann_json
         Reflect::Reflect
+        yaml-cpp::yaml-cpp
         magic_enum
         span
         common
