--- a/ttnn/cpp/ttnn/operations/ccl/CMakeLists.txt
+++ b/ttnn/cpp/ttnn/operations/ccl/CMakeLists.txt
@@ -1,3 +1,12 @@
+set(CCL_TTNN_SRCS_PYBIND
+    ${CMAKE_CURRENT_SOURCE_DIR}/ccl_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/all_gather/all_gather_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/reduce_scatter_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/barrier/barrier_pybind.cpp
+    CACHE INTERNAL
+    "CCL sources to reuse in ttnn build"
+)
+
 set(CCL_TTNN_SRCS
     # Common
     ${CMAKE_CURRENT_SOURCE_DIR}/erisc_datamover_builder.cpp
@@ -12,21 +21,17 @@ set(CCL_TTNN_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/common/host/ccl_worker_builder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/common/host/ccl_command_stream_builders.cpp
     # CCL Ops
-    ${CMAKE_CURRENT_SOURCE_DIR}/ccl_pybind.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/all_gather/all_gather.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/all_gather/all_gather_pybind.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/all_gather/device/all_gather_op.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/all_gather/device/multi_core/all_gather_op_multi_core.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/device/host/reduce_scatter_full_worker_grid.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/device/reduce_scatter_op.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/reduce_scatter.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/reduce_scatter_pybind.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/host/reduce_scatter_worker_builder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/reduce_scatter/host/reduce_scatter_common.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/barrier/device/host/barrier_full_worker_grid.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/barrier/device/barrier_op.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/barrier/barrier.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/barrier/barrier_pybind.cpp
     CACHE INTERNAL
-    "CCL sources to reuse in ttnn build"
+    "CCL sources to reuse in ttnncpp build"
 )
