Splitting python bindings and cpp in ttnn library, we will have ttnncpp and ttnn, where ttnncpp will work as c++ backend while the ttnn library is the wrapper for python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,7 +282,7 @@ install(
 )
 install(
     TARGETS
-        ttnn
+        ttnncpp
     ARCHIVE
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY
@@ -291,6 +291,16 @@ install(
 )
 if(WITH_PYTHON_BINDINGS)
     # Install .so into src files for pybinds implementation
+    install(
+        TARGETS
+            ttnn
+        ARCHIVE
+            DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        LIBRARY
+            DESTINATION ${CMAKE_INSTALL_LIBDIR}
+            COMPONENT dev
+    )
+
     install(
         TARGETS
             ttnn
