--- a/.github/workflows/all-static-checks.yaml
+++ b/.github/workflows/all-static-checks.yaml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check kernel count in base metal is less than maximum
         run: if (( $(find tt_metal/kernels/ -type f | wc -l) > 8 )); then exit 1; fi
-  check-doc-spelling:
+  check-doc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
