--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -70,7 +70,7 @@ jobs:
         run: |
           touch gh_pages/index.html
       - name: Deploy to GitHub Pages
-        #if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: JamesIves/github-pages-deploy-action@v4
         id: deployment
         with:
