--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -211,7 +211,7 @@ jobs:
       - name: 🐍 Build wheel
         if: ${{ inputs.build-wheel }}
         run: |
-          git clean -xffd
+          git clean -xfd
           nice -n 19 python3 -m build
 
       - name: ☁️ Upload wheel
