Revert "Update build-artifact.yaml"
This reverts commit 3c0bd66058b64399ac423e54270671bcfc93d923.

--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -211,7 +211,7 @@ jobs:
       - name: 🐍 Build wheel
         if: ${{ inputs.build-wheel }}
         run: |
-          git clean -xfd
+          git clean -xffd
           nice -n 19 python3 -m build
 
       - name: ☁️ Upload wheel
