#0: Make build_artifact dependent on create-tag

--- a/.github/workflows/package-and-release.yaml
+++ b/.github/workflows/package-and-release.yaml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   build-artifact:
+    needs: create-tag
     uses: ./.github/workflows/build-artifact.yaml
     secrets: inherit
     with:
