--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -7,6 +7,9 @@ on:
         required: false
         type: string
         default: "ubuntu-20.04"
+      docker-image:
+        required: true
+        type: string
 
 jobs:
   device-perf:
@@ -20,37 +23,43 @@ jobs:
           {name: "N300 WH B0", arch: wormhole_b0, runs-on: ["N300", "pipeline-perf", "bare-metal", "in-service"], machine-type: "bare_metal", timeout: 40},
         ]
     name: "${{ matrix.test-info.name }} device perf"
-    env:
-      ARCH_NAME: ${{ matrix.test-info.arch }}
-      LOGURU_LEVEL: INFO
-      LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
     runs-on: ${{ matrix.test-info.runs-on }}
     container:
-      image: ghcr.io/tenstorrent/tt-metal/tt-metalium/ubuntu-22.04-amd64:latest
+      image: ${{ inputs.docker-image }}
       env:
-        TT_METAL_HOME: ${{ github.workspace }}
+        TT_METAL_HOME: /work
+        LD_LIBRARY_PATH: /work/build/lib
         ARCH_NAME: ${{ matrix.test-info.arch }}
-        LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
-        PYTHON_ENV_DIR: ${{ github.workspace }}/python_env
+        PYTHON_ENV_DIR: /work/python_env
+        LOGURU_LEVEL: INFO
       volumes:
         - /dev/hugepages-1G:/dev/hugepages-1G
         - /mnt/MLPerf:/mnt/MLPerf
-      options: --device /dev/tenstorrent
+      options: "--device /dev/tenstorrent"
+    defaults:
+      run:
+        shell: bash
+        working-directory: /work # https://github.com/actions/runner/issues/878
     steps:
-      - name: Set safe directory for Git
-        run: git config --global --add safe.directory $GITHUB_WORKSPACE
-      - uses: tenstorrent/tt-metal/.github/actions/checkout-with-submodule-lfs@main
-      - name: Set up dynamic env vars for build
-        run: |
-          echo "TT_METAL_HOME=$(pwd)" >> $GITHUB_ENV
-      - uses: ./.github/actions/prepare-metal-run
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
         with:
-          is_profiler: 'true'
+          submodules: recursive
+          path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: TTMetal_build_any
+          path: docker-job
+
+      - name: Extract files
+        run: tar -xvf ttm_any.tar
+
       - name: ${{ matrix.test-group.name }} tests
         timeout-minutes: ${{ matrix.test-info.timeout }}
         run: |
-          source python_env/bin/activate
           ./tests/scripts/run_tests.sh --tt-arch $ARCH_NAME --pipeline-type models_device_performance_${{ matrix.test-info.machine-type }}
+
       - name: Check device perf report exists
         id: check-device-perf-report
         if: ${{ !cancelled() }}
@@ -59,9 +68,21 @@ jobs:
           export DEVICE_PERF_REPORT_FILENAME=Models_Device_Perf_$(date +%Y_%m_%d).csv
           ls -hal $DEVICE_PERF_REPORT_FILENAME
           echo "device_perf_report_filename=$DEVICE_PERF_REPORT_FILENAME" >> "$GITHUB_OUTPUT"
+
       - name: Upload device perf report
         if: ${{ !cancelled() && steps.check-device-perf-report.conclusion == 'success' }}
         uses: actions/upload-artifact@v4
         with:
           name: device-perf-report-csv-${{ matrix.test-info.arch }}-${{ matrix.test-info.machine-type }}
           path: "${{ steps.check-device-perf-report.outputs.device_perf_report_filename }}"
+
+      - name: Cleanup
+        if: always()
+        run: |
+          # We are forced to checkout the repo into a subdir of the host's workdir; this pollutes the host
+          # with root-owned files.  Be sure to clean up after ourselves in case we're on a non-ephemeral runner.
+          echo "pre rm"
+          ls -al /__w/tt-metal/tt-metal
+          rm -rf /__w/tt-metal/tt-metal/docker-job
+          echo "post rm"
+          ls -al /__w/tt-metal/tt-metal
