--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -36,6 +36,7 @@ jobs:
         PYTHON_ENV_DIR: /work/python_env
         LOGURU_LEVEL: INFO
       volumes:
+        - ${{ github.workspace }}/docker-job:/work # Subdir to workaround https://github.com/actions/runner/issues/691
         - /dev/hugepages-1G:/dev/hugepages-1G
         - /mnt/MLPerf:/mnt/MLPerf
       options: "--device /dev/tenstorrent"
