--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -54,9 +54,12 @@ on:
       #ci-test-docker-image:
       #  description: "Docker tag for the CI Test Docker image for testing TT-Metalium et al"
       #  value: ${{ jobs.build-docker-image.outputs.ci-test-tag }}
-      artifact-name:
-        description: "Name of the published artifact"
-        value: ${{ jobs.build-artifact.outputs.artifact_name }}
+      build-artifact-name:
+        description: "Name of the published build artifact"
+        value: ${{ jobs.build-artifact.outputs.build_artifact_name }}
+      wheel-artifact-name:
+        description: "Name of the published wheel artifact"
+        value: ${{ jobs.build-artifact.outputs.wheel_artifact_name }}
 
 
   workflow_dispatch:
@@ -111,7 +114,8 @@ jobs:
       - build
       - in-service
     outputs:
-      artifact_name: ${{ steps.set_artifact_name.outputs.artifact_name }}
+      build_artifact_name: ${{ steps.set_build_artifact_name.outputs.build_artifact_name }}
+      wheel_artifact_name: ${{ steps.set_wheel_artifact_name.outputs.wheel_artifact_name }}
     container:
       image: ${{ needs.build-docker-image.outputs.ci-build-tag }}
       env:
@@ -206,11 +210,18 @@ jobs:
           ccache -s >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
 
+      - name: Set wheel artifact name
+        id: set_wheel_artifact_name
+        run: |
+          WHEEL_ARTIFACT_NAME="eager-dist-${{ inputs.distro }}-${{ inputs.version }}-any${{ (inputs.tracy && '-profiler') || '' }}"
+          echo "wheel_artifact_name=$WHEEL_ARTIFACT_NAME" >> "$GITHUB_ENV"
+          echo "wheel_artifact_name=$WHEEL_ARTIFACT_NAME" >> "$GITHUB_OUTPUT"
+
       - name: ☁️ Upload wheel
         if: ${{ inputs.build-wheel }}
         uses: actions/upload-artifact@v4
         with:
-          name: eager-dist-${{ inputs.distro }}-${{ inputs.version }}-any
+          name: ${{ env.wheel_artifact_name }}
           path: /work/dist/
           if-no-files-found: error
 
@@ -218,18 +229,18 @@ jobs:
         if: ${{ inputs.publish-artifact }}
         run: tar -cvhf /work/ttm_any.tar ttnn/ttnn/*.so build/lib ttnn/ttnn/*.so build/programming_examples build/test build/tools build/tt-train data runtime
 
-      - name: Set artifact name
-        id: set_artifact_name
+      - name: Set build artifact name
+        id: set_build_artifact_name
         run: |
-          ARTIFACT_NAME="TTMetal_build_any${{ (inputs.tracy && '_profiler') || '' }}"
-          echo "artifact_name=$ARTIFACT_NAME" >> "$GITHUB_ENV"
-          echo "artifact_name=$ARTIFACT_NAME" >> "$GITHUB_OUTPUT"
+          BUILD_ARTIFACT_NAME="TTMetal_build_any${{ (inputs.tracy && '_profiler') || '' }}"
+          echo "build_artifact_name=$BUILD_ARTIFACT_NAME" >> "$GITHUB_ENV"
+          echo "build_artifact_name=$BUILD_ARTIFACT_NAME" >> "$GITHUB_OUTPUT"
 
       - name: ☁️ Upload tarball
         if: ${{ inputs.publish-artifact }}
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.artifact_name }}
+          name: ${{ env.build_artifact_name }}
           path: /work/ttm_any.tar
           if-no-files-found: error
 
