--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -10,7 +10,7 @@ on:
       docker-image:
         required: true
         type: string
-      artifact-name:
+      wheel-artifact-name:
         required: true
         type: string
 
@@ -51,17 +51,17 @@ jobs:
           submodules: recursive
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
 
+      - name: ⬇️ Download Wheel
       - uses: actions/download-artifact@v4
         with:
-          name: ${{ inputs.artifact-name }}
+          name: ${{ inputs.wheel-artifact-name }}
           path: docker-job
-
-      - name: Extract files
-        run: tar -xvf ttm_any.tar
 
       - name: ${{ matrix.test-group.name }} tests
         timeout-minutes: ${{ matrix.test-info.timeout }}
         run: |
+          WHEEL_FILENAME=$(ls -1 *.whl)
+          pip3 install $WHEEL_FILENAME
           ./tests/scripts/run_tests.sh --docker --tt-arch $ARCH_NAME --pipeline-type models_device_performance_${{ matrix.test-info.machine-type }}
 
       - name: Check device perf report exists
