--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -33,7 +33,6 @@ jobs:
         TT_METAL_HOME: /work
         LD_LIBRARY_PATH: /work/build/lib
         ARCH_NAME: ${{ matrix.test-info.arch }}
-        PYTHONPATH: /work
         LOGURU_LEVEL: INFO
       volumes:
         - ${{ github.workspace }}/docker-job:/work # Subdir to workaround https://github.com/actions/runner/issues/691
@@ -52,7 +51,7 @@ jobs:
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
 
       - name: ⬇️ Download Wheel
-      - uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.wheel-artifact-name }}
           path: docker-job
