--- a/.github/workflows/pr-comment-trigger.yaml
+++ b/.github/workflows/pr-comment-trigger.yaml
@@ -37,6 +37,7 @@ jobs:
           echo "Test Triggered: ${{ steps.test_check.outputs.triggered }}"
 
   mirror_fetch_pr_info:
+    needs: detect_trigger
     if: needs.detect_trigger.outputs.mirror_triggered == 'true'
     runs-on: ubuntu-latest    
     outputs:
@@ -54,20 +55,20 @@ jobs:
           echo "source=${{ steps.find_pr.outputs.head_repo_owner }}:${{ steps.find_pr.outputs.head_ref }}" >> $GITHUB_OUTPUT
 
   mirror:
-    needs: mirror_fetch_pr_info
-    if: needs.detect_trigger.outputs.mirror_triggered == 'true'
+    needs: [detect_trigger, mirror_fetch_pr_info]
     uses: ./.github/workflows/mirror-fork-branch.yaml
     with:
       source: "${{ needs.mirror_fetch_pr_info.outputs.source }}"
 
   test:
+    needs: detect_trigger
     if: needs.detect_trigger.outputs.test_triggered == 'true'
     uses: ./.github/workflows/all-post-commit-workflows.yaml
     with:
       build-type: Release
 
   post_comment:
-    needs: [mirror, test]
+    needs: detect_trigger
     if: needs.detect_trigger.outputs.mirror_triggered == 'true' || needs.detect_trigger.outputs.test_triggered == 'true'
     runs-on: ubuntu-latest
     steps:
