--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -10,6 +10,9 @@ on:
       docker-image:
         required: true
         type: string
+      build-artifact-name:
+        required: true
+        type: string
       wheel-artifact-name:
         required: true
         type: string
@@ -49,6 +52,16 @@ jobs:
         with:
           submodules: recursive
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
+
+      - name: ⬇️ Download Build
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.build-artifact-name }}
+          path: docker-job
+
+      - name: Extract files
+        shell: bash
+        run: tar -xvf ttm_any.tar
 
       - name: ⬇️ Download Wheel
         uses: actions/download-artifact@v4
