Use the namespaced target for magic_enum

--- a/tt_fabric/CMakeLists.txt
+++ b/tt_fabric/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(
         Metalium::Metal::LLRT
         umd::device
         metal_common_libs
-        magic_enum
+        magic_enum::magic_enum
         fmt::fmt-header-only
         yaml-cpp::yaml-cpp
 )
