--- a/tt_metal/llrt/CMakeLists.txt
+++ b/tt_metal/llrt/CMakeLists.txt
@@ -107,7 +107,7 @@ target_link_libraries(
         nlohmann_json::nlohmann_json
         Reflect::Reflect
         yaml-cpp::yaml-cpp
-        magic_enum
+        magic_enum::magic_enum
         span
         common
 )
