--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -69,12 +69,31 @@ jobs:
           name: ${{ inputs.wheel-artifact-name }}
           path: docker-job
 
-      - name: ${{ matrix.test-group.name }} tests
-        timeout-minutes: ${{ matrix.test-info.timeout }}
+      - name: Install Wheel
         run: |
           WHEEL_FILENAME=$(ls -1 *.whl)
           pip3 install $WHEEL_FILENAME
-          ./tests/scripts/run_tests.sh --docker --tt-arch $ARCH_NAME --pipeline-type models_device_performance_${{ matrix.test-info.machine-type }}
+
+      - name: ${{ matrix.test-info.name }} tests
+        timeout-minutes: ${{ matrix.test-info.timeout }}
+        run: |
+          if [[ "${{ matrix.test-info.arch }}" == "wormhole_b0" ]]; then
+            export WH_ARCH_YAML=wormhole_b0_80_arch_eth_dispatch.yaml
+          fi
+          pytest models/demos/wormhole/stable_diffusion/tests -m models_device_performance_bare_metal --timeout=600
+          pytest models/demos/distilbert/tests -m models_device_performance_bare_metal
+          pytest models/demos/vgg/tests/ -m models_device_performance_bare_metal
+          pytest models/demos/convnet_mnist/tests/ -m models_device_performance_bare_metal
+          pytest models/demos/bert_tiny/tests/ -m models_device_performance_bare_metal
+          pytest models/demos/mnist/tests -m models_device_performance_bare_metal
+          pytest models/demos/squeezebert/tests -m models_device_performance_bare_metal
+          pytest models/demos/roberta/tests/ -m models_device_performance_bare_metal
+          pytest models/demos/wormhole/resnet50/tests -m models_device_performance_bare_metal
+          pytest models/experimental/functional_unet/tests/test_unet_perf.py -m models_device_performance_bare_metal
+          pytest models/demos/wormhole/mamba/tests -m models_device_performance_bare_metal
+          pytest models/demos/metal_BERT_large_11/tests -m models_device_performance_bare_metal
+          pytest models/demos/falcon7b_common/tests -m models_device_performance_bare_metal
+          pytest models/demos/wormhole/bert_tiny/tests -m models_device_performance_bare_metal
 
       - name: Check device perf report exists
         id: check-device-perf-report
