--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -154,7 +154,7 @@ CPMAddPackage(
 ############################################################################################################################
 
 CPMAddPackage(
-    NAME json
+    NAME nlohmann_json
     GITHUB_REPOSITORY nlohmann/json
     GIT_TAG v3.11.3
     OPTIONS
