--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -97,6 +97,7 @@ CPMAddPackage(NAME magic_enum GITHUB_REPOSITORY Neargye/magic_enum GIT_TAG v0.9.
 ############################################################################################################################
 
 CPMAddPackage(NAME fmt GITHUB_REPOSITORY fmtlib/fmt GIT_TAG 11.0.1 OPTIONS "CMAKE_MESSAGE_LOG_LEVEL NOTICE")
+
 ############################################################################################################################
 # range-v3 : https://github.com/ericniebler/range-v3
 ############################################################################################################################
@@ -193,7 +194,9 @@ CPMAddPackage(
     OPTIONS
         "CMAKE_MESSAGE_LOG_LEVEL NOTICE" # Taskflow's CMakeLists.txt is super noisy
 )
-add_library(Taskflow::Taskflow ALIAS Taskflow)
+if(Taskflow_ADDED AND NOT TARGET Taskflow::Taskflow)
+    add_library(Taskflow::Taskflow ALIAS Taskflow)
+endif()
 
 ############################################################################################################################
 # flatbuffers : https://github.com/google/flatbuffers
