--- a/tt_metal/CMakeLists.txt
+++ b/tt_metal/CMakeLists.txt
@@ -1,3 +1,9 @@
+if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    message(STATUS "Enabling code coverage flags for all tt_metal targets")
+    add_compile_options(--coverage)
+    add_link_options(--coverage)
+endif()
+
 add_library(tt_metal)
 add_library(Metalium::Metal ALIAS tt_metal)
 
