--- a/.github/workflows/full-new-models-suite.yaml
+++ b/.github/workflows/full-new-models-suite.yaml
@@ -39,6 +39,10 @@ jobs:
     needs: build-artifact-profiler
     uses: ./.github/workflows/perf-device-models-impl.yaml
     secrets: inherit
+    with:
+      docker-image: ${{ needs.build-artifact-profiler.outputs.ci-build-docker-image }}
+      build-artifact-name: ${{ needs.build-artifact-profiler.outputs.build-artifact-name }}
+      wheel-artifact-name: ${{ needs.build-artifact-profiler.outputs.wheel-artifact-name }}
   e2e-model-perf-single-card:
     needs: build-artifact
     uses: ./.github/workflows/perf-models-impl.yaml
