--- a/tests/tt_metal/tt_metal/CMakeLists.txt
+++ b/tests/tt_metal/tt_metal/CMakeLists.txt
@@ -83,9 +83,7 @@ add_custom_target(
         unit_tests_debug_tools_wormhole_b0
         unit_tests_debug_tools_blackhole
         unit_tests_device
-        unit_tests_dispatch_grayskull
-        unit_tests_dispatch_wormhole_b0
-        unit_tests_dispatch_blackhole
+        unit_tests_dispatch
         unit_tests_eth_grayskull
         unit_tests_eth_wormhole_b0
         unit_tests_eth_blackhole
